--- a/Databases-Teamwork-Practical-Project/SantasToyFactory/SantasToyFactory.DataOperations/packages.config
+++ b/Databases-Teamwork-Practical-Project/SantasToyFactory/SantasToyFactory.DataOperations/packages.config
@@ -1,4 +1,6 @@
 ﻿<?xml version="1.0" encoding="utf-8"?>
 <packages>
+  <package id="ClosedXML" version="0.74.0" targetFramework="net45" />
+  <package id="DocumentFormat.OpenXml" version="2.5" targetFramework="net45" />
   <package id="DotNetZip" version="1.9.3" targetFramework="net45" />
 </packages>
